EDA and training

--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -4544,15 +4544,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 340,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data\\ski_data_step3_features.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data \n",
     "\n",
     "datapath = '../data'\n",
     "save_file(ski_data, 'ski_data_step3_features.csv', datapath)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
